# fkcrypto

./: .env.example  .gitignore  AGENTS.md  README.md  litellm_config.example.yaml  optimization-roadmap.md  pyproject.toml  requirements.txt  skills-lock.json
config/: default.yaml  exchanges.yaml  notifications.yaml
config/strategies/: README.md  bull-trend.yaml  mean-reversion.yaml  momentum-breakout.yaml  news-sentiment.yaml  portfolio-rebalancer.yaml  scalping-ema.yaml  whale-watcher.yaml
dashboard/: app.py
docker/: .env.docker  Dockerfile.dashboard  Dockerfile.gateway  docker-compose.yml  entrypoint.sh  prometheus.yml
docker/nginx/: nginx.conf
docs/: AGENTS.md  ARCHITECTURE.md  BACKTESTING.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  TODO.md
scripts/: migrate.sh  migrate_db.py  setup.sh
src/: __init__.py
src/agents/: SKILL-decision-engine.md  SKILL-market-monitor.md  SKILL-news-sentiment.md  SKILL-risk-guardian.md  SKILL-technical-analyst.md  __init__.py  alpha_seeker.py  analyst.py  base.py  decision_engine.py  delegation.py  heartbeat.py  knowledge_graph.py  market_monitor.py  news_sentiment.py  reasoning.py  risk_guardian.py  scheduler.py  signal.py  tracing.py
src/backtesting/: __init__.py  data_replay.py  engine.py  metrics.py  replay.py  simulator.py
src/bus/: __init__.py  in_memory_bus.py  message.py  redis_bus.py
src/data/: __init__.py  base.py  cache.py  ccxt_source.py  coingecko.py  news.py  onchain.py  social.py  vector_db.py
src/database/: models.py  repository.py
src/execution/: __init__.py  approval.py  service.py  validator.py
src/freqtrade_client/: __init__.py  client.py
src/gateway/: __init__.py  __main__.py  graph.py  nodes.py
src/llm/: __init__.py  litellm_gateway.py
src/metrics/: __init__.py  registry.py  server.py
src/risk/: engine.py  position_sizing.py
src/security/: __init__.py  secrets.py
src/utils/: config.py  notifications.py  scheduler.py
(+19 files in other folders)
